# vk_graphics_stuff

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
bul/: CMakeLists.txt
bul/include/bul/: bul.h  cmd_args.h  enum.h  event.h  file.h  format.h  hash.h  input.h  log.h  memory_util.h  time.h  timer.h  types.h  util.h  uuid.h  virtual_keys.def  window.h
bul/include/bul/allocators/: linear_allocator.h  scope_allocator.h
bul/include/bul/containers/: buffer.h  enum_array.h  handle.h  map.h  pool.h  result.h  ring_buffer.h  span.h  static_queue.h  static_vec.h  static_vector.h  vector.h
bul/include/bul/math/: math.h  matrix.h  vector.h
bul/src/: bul.cpp  cmd_args.cpp  file.cpp  format.cpp  hash.cpp  input.cpp  log.cpp
bul/src/allocators/: linear_allocator.cpp  scope_allocator.cpp
bul/src/containers/: buffer.cpp
bul/src/math/: matrix.cpp  vector.cpp
bul/src/platform/: file_win32.cpp  time_win32.cpp  timer_win32.cpp  util_win32.cpp  window_win32.cpp
bul/tests/: common_test.h  map.cpp  matrix.cpp  pool.cpp  static_queue.cpp  static_vec.cpp  static_vector.cpp  vector.cpp
bul/tests/containers/: map.cpp  pool.cpp  static_queue.cpp  static_vector.cpp  vector.cpp
bul/tests/math/: matrix.cpp  vector.cpp
shaders/: basic_3d.frag  basic_3d.vert  test.frag  test.vert  test_triangle.frag  test_triangle.vert  tonemap.comp  tonemap.frag  triangle.frag  triangle.vert  voxel.frag  voxel.vert  voxel_point.frag  voxel_raytrace.comp
shaders/include/: global.glsl  raytrace.glsl  test.glsl  voxel.glsl
src/: main.cc  main.cpp  tools.hh
src/api/: vertex.hh  vk_tools.cc  vk_tools.hh
src/api/application/: application.hh
src/api/buffer/: buffer.cc  buffer.hh
src/api/buffers/: buffer.cc  buffer.hh
src/api/camera/: camera.cc  camera.hh
src/api/command_buffer/: command_buffer.cc  command_buffer.hh
src/api/command_buffers/: command_buffers.cc  command_buffers.hh
src/api/command_pool/: command_pool.cc  command_pool.hh
src/api/descriptor_pool/: descriptor_pool.hh
src/api/descriptor_set/: descriptor_set.cc  descriptor_set.hh
src/api/event/: event.cc  event.hh
src/api/frame_data/: frame_data.cc  frame_data.hh
src/api/framebuffer/: framebuffer.hh
src/api/input/: input.cc
src/api/instance/: instance.cc
src/api/physical_device/: physical_device.cc  physical_device.hh
src/api/pipeline/: pipeline.cc  pipeline.hh
src/api/render_pass/: render_pass.hh
src/api/shader/: shader.cc  shader.hh
src/api/surface/: surface.cc
src/api/swapchain/: swapchain.cc  swapchain.hh
src/api/time/: time.cc  time.hh
src/api/vk_context/: vk_context.cc  vk_context.hh
src/api/vulkan/: vk_tools.cc  vk_tools.hh
src/api/vulkan/buffer/: buffer.cc  buffer.hh
src/api/vulkan/command_buffer/: command_buffer.cc  command_buffer.hh
src/api/vulkan/command_pool/: command_pool.hh
src/api/vulkan/descriptor_pool/: descriptor_pool.cc  descriptor_pool.hh
src/api/vulkan/descriptor_set/: descriptor_set.cc  descriptor_set.hh
src/api/vulkan/device/: device.cc  device.hh
src/api/vulkan/frame_data/: frame_data.cc  frame_data.hh
src/api/vulkan/framebuffer/: framebuffer.cc  framebuffer.hh
src/api/vulkan/image/: image.cc  image.hh
src/api/vulkan/image_view/: image_view.cc  image_view.hh
src/api/vulkan/instance/: instance.hh
src/api/vulkan/physical_device/: physical_device.cc  physical_device.hh
src/api/vulkan/pipeline/: pipeline.cc  pipeline.hh
src/api/vulkan/render_pass/: render_pass.cc  render_pass.hh
src/api/vulkan/sampler/: sampler.cc  sampler.hh
src/api/vulkan/shader/: shader.cc  shader.hh
src/api/vulkan/surface/: surface.hh
src/api/vulkan/swapchain/: swapchain.cc  swapchain.hh
src/api/vulkan/vk_context/: vk_context.cc  vk_context.hh
src/api/vulkan/vk_imgui/: vk_imgui.cc
src/api/window/: window.cc  window.hh
src/core/: handle.hh  hash.hh  pool.hh  time.hh
src/engine/: camera.cc  camera.cpp  camera.h  camera.hh  ecs.cc  ecs.hh  event.cc  event.hh  gltf.cc  gltf.cpp  gltf.h  gltf.hh  image.cpp  image.h  input.cc  input.hh  path_tracing_renderer.cc  path_tracing_renderer.cpp  path_tracing_renderer.h  path_tracing_renderer.hh  renderer.cc  renderer.cpp  renderer.h  renderer.hh  test_renderer.cpp  test_renderer.h  texture.cpp  texture.h  vox_loader.cc  vox_loader.cpp  vox_loader.h  vox_loader.hh  window.cc  window.hh
src/engine/vulkan/: buffer.cc  buffer.cpp  buffer.h  buffer.hh  command.cc  command.cpp  command.h  command.hh  compute_pipeline.cc  compute_pipeline.cpp  compute_pipeline.h  compute_pipeline.hh  context.cc  context.cpp  context.h  context.hh  descriptor_set.cc  descriptor_set.cpp  descriptor_set.h  descriptor_set.hh  device.cc  device.cpp  device.h  device.hh  frame_context.cc  frame_context.cpp  frame_context.h  frame_context.hh  framebuffer.cc  framebuffer.cpp  framebuffer.h  framebuffer.hh  fwd.h  graphics_pipeline.cc  graphics_pipeline.cpp  graphics_pipeline.h  graphics_pipeline.hh  image.cc  image.cpp  image.h  (+16 more)
src/engine/vulkan/vk_imgui/: vk_imgui.cc  vk_imgui.hh
src/test_app/: test_app.cc  test_app.hh
src/util/: hash.hh  implems.cc  implems.cpp  pool.h  time.hh  tools.hh
src/vk/: buffer.cpp  buffer.h  commands.cpp  commands.h  constants.h  context.cpp  context.h  descriptor.cpp  descriptor.h  image.cpp  image.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  surface.cpp  surface.h  vk_tools.cpp  vk_tools.h
src/voxel_app/: voxel_app.cc  voxel_app.hh
